B-Bone display size/scaling op issues #68610

Closed
opened 2019-08-13 15:28:02 +02:00 by Martin Capitanio · 15 comments

System Information

Blender 2.81 (sub 1)
	build date: 2019-08-13
	build time: 13:38:11
	build commit date: 2019-08-13
	build commit time: 11:31
	build hash: 6f9cbbc8ec4f
	build platform: Linux
	build type: RelWithDebInfo

Blender Version
Broken: 6f9cbbc8ec

Exact steps for others to reproduce the error

  • Start Blender with "--factory-startup".
  • Add an armature, set viewport display as B-Bone and switch to the edit or pose mode.
  • Scale the B-Bone display size [ctrl-alt-s].

Bug
B-Bone scaling triggers a wrong "redo Transform" dialog, it should be Resize.
+ UI glitch bonus
"Display size X, Z" is also relevant for 1 segment and should therefore not be greyed out.

b-bone-size.jpg

**System Information** ``` Blender 2.81 (sub 1) build date: 2019-08-13 build time: 13:38:11 build commit date: 2019-08-13 build commit time: 11:31 build hash: 6f9cbbc8ec4f build platform: Linux build type: RelWithDebInfo ``` **Blender Version** Broken: 6f9cbbc8ec **Exact steps for others to reproduce the error** * Start Blender with "--factory-startup". * Add an armature, set viewport display as B-Bone and switch to the edit or pose mode. * Scale the B-Bone display size [ctrl-alt-s]. **Bug** B-Bone scaling triggers a wrong "redo Transform" dialog, it should be Resize. **+ UI glitch bonus** "Display size X, Z" is also relevant for 1 segment and should therefore not be greyed out. ![b-bone-size.jpg](https://archive.blender.org/developer/F7662485/b-bone-size.jpg)

Added subscriber: @capnm

Added subscriber: @capnm

#70424 was marked as duplicate of this issue

#70424 was marked as duplicate of this issue
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

I guess with VP you mean "viewport"?
Why is a Resize dialog more correct than a transform dialog? Both seems fine (not that Transform is not Translate).

The display size should not be grayed out here indeed.

I guess with `VP` you mean "viewport"? Why is a Resize dialog more correct than a transform dialog? Both seems fine (not that Transform is not Translate). The display size should not be grayed out here indeed.

Why is a Resize dialog more correct than a transform dialog? Both seems fine (not that Transform is not Translate).

You will change the size of the B-Bone profile. Try to change some values in the transform dialog. This doesn't work.

> Why is a Resize dialog more correct than a transform dialog? Both seems fine (not that Transform is not Translate). You will change the size of the B-Bone profile. Try to change some values in the transform dialog. This doesn't work.
Member

Added subscriber: @Mets

Added subscriber: @Mets
Member

I'll take care of the graying out issue since that's my bad.

It looks like you can change the bbone scale using "Value X" in the redo panel. Which in turn will also update Y and Z, which you cannot change manually or individually... it's quite odd but it works.

When I was looking at the transform code, it all felt like a big mess. But I'm new to C so everything feels like a big mess to me, so I shouldn't be the judge of that. But if I'm right, maybe it could be thrown into a "code cleanup" task where we keep track of code that "works but isn't ideal". I don't know if such a thing already exists, I think it would be handy if it did.

I'll take care of the graying out issue since that's my bad. It looks like you can change the bbone scale using "Value X" in the redo panel. Which in turn will also update Y and Z, which you cannot change manually or individually... it's quite odd but it works. When I was looking at the transform code, it all felt like a big mess. But I'm new to C so everything feels like a big mess to me, so I shouldn't be the judge of that. But if I'm right, maybe it could be thrown into a "code cleanup" task where we keep track of code that "works but isn't ideal". I don't know if such a thing already exists, I think it would be handy if it did.
Member

In #68610#752171, @Mets wrote:
I'll take care of the graying out issue since that's my bad.

Too late. Fixed that already in 6e7ea807e1.

> In #68610#752171, @Mets wrote: > I'll take care of the graying out issue since that's my bad. Too late. Fixed that already in 6e7ea807e1.

It looks like you can change the bbone scale using "Value X" in the redo panel.

You can e.g. hit [ctrl-alt-s + x] and constrain the operator to resize in the x-axis . If you change the x-value in the redo panel, it resets the bbone profile from rectangle to sqare. It says ScaleB X, Y, Z in the upper left corner, so I think the resize dialog would be more appropriate here.

> It looks like you can change the bbone scale using "Value X" in the redo panel. You can e.g. hit [ctrl-alt-s + x] and constrain the operator to resize in the x-axis . If you change the x-value in the redo panel, it resets the bbone profile from rectangle to sqare. It says ScaleB X, Y, Z in the upper left corner, so I think the resize dialog would be more appropriate here.
Member

The redo panel is based on what operator was used last, so it would be a matter of moving that code to a different operator. The resize operator does something completely unrelated to things like bbone x/z width(which is only used for display), envelope head/tail radius and envelope distance. So maybe the answer is to give all these things their own operator? But would that make the transform code more or less of a mess?

The redo panel is based on what operator was used last, so it would be a matter of moving that code to a different operator. The resize operator does something completely unrelated to things like bbone x/z width(which is only used for display), envelope head/tail radius and envelope distance. So maybe the answer is to give all these things their own operator? But would that make the transform code more or less of a mess?

I didn't know it was that complicated. Sounds like it's not worth fixing this.
In any case, you can now set the exact values in the bbone UI, thanks for cleaning that up!

I didn't know it was that complicated. Sounds like it's not worth fixing this. In any case, you can now set the exact values in the bbone UI, thanks for cleaning that up!

Now, comparing the transform operations / dialogs in 2.7x and 2.8x, I think that the functionality in 2.7x was not broken from a user's perspective, even though it was strange. You could enable / disable the constraint axis in the UI, and then changing the "x-value" worked as expected.

For some reason, the dialog has been redesigned, so only the 'orient_axis' can be changed, which is in this case useless, and also the printed constraint_axis property seems to be ignored. Maybe someone could at least bring it into the old, messy but working state?

2.7x
bpy.ops.transform.transform(mode='BONE_SIZE', value=(5.86101, 12.911, 6.10101, 0.37), axis=(0, 0, 0), constraint_axis=(True, False, False), constraint_orientation='GLOBAL', mirror=False, proportional='DISABLED', proportional_edit_falloff='SMOOTH', proportional_size=1)

Screenshot from 2019-08-14 15-09-02.png

2.8x
bpy.ops.transform.transform(mode='BONE_SIZE', value=(0.973, 0.973, 0.973, 0), orient_axis='Z', orient_type='GLOBAL', orient_matrix=((1, 0, 0), (0, 1, 0), (0, 0, 1)), orient_matrix_type='GLOBAL', constraint_axis=(True, False, False), mirror=True, use_proportional_edit=False, proportional_edit_falloff='SMOOTH', proportional_size=1, use_proportional_connected=False, use_proportional_projected=False)

Screenshot from 2019-08-14 15-09-11.png

Now, comparing the transform operations / dialogs in 2.7x and 2.8x, I think that the functionality in 2.7x was not broken from a user's perspective, even though it was strange. You could enable / disable the constraint axis in the UI, and then changing the "x-value" worked as expected. For some reason, the dialog has been redesigned, so only the 'orient_axis' can be changed, which is in this case useless, and also the printed constraint_axis property seems to be ignored. Maybe someone could at least bring it into the old, messy but working state? 2.7x bpy.ops.transform.transform(mode='BONE_SIZE', value=(5.86101, 12.911, 6.10101, 0.37), axis=(0, 0, 0), **constraint_axis=(True, False, False)**, constraint_orientation='GLOBAL', mirror=False, proportional='DISABLED', proportional_edit_falloff='SMOOTH', proportional_size=1) ![Screenshot from 2019-08-14 15-09-02.png](https://archive.blender.org/developer/F7664455/Screenshot_from_2019-08-14_15-09-02.png) 2.8x bpy.ops.transform.transform(mode='BONE_SIZE', value=(0.973, 0.973, 0.973, 0), orient_axis='Z', orient_type='GLOBAL', orient_matrix=((1, 0, 0), (0, 1, 0), (0, 0, 1)), orient_matrix_type='GLOBAL', **constraint_axis=(True, False, False)**, mirror=True, use_proportional_edit=False, proportional_edit_falloff='SMOOTH', proportional_size=1, use_proportional_connected=False, use_proportional_projected=False) ![Screenshot from 2019-08-14 15-09-11.png](https://archive.blender.org/developer/F7664453/Screenshot_from_2019-08-14_15-09-11.png)

Added subscribers: @tiles, @mano-wii

Added subscribers: @tiles, @mano-wii
Germano Cavalcante self-assigned this 2019-10-02 13:27:22 +02:00
Germano Cavalcante was unassigned by Dalai Felinto 2019-12-23 16:33:19 +01:00

This issue was referenced by ef4505a158

This issue was referenced by ef4505a1583f117414b484c7bd00a942854fb33d

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2020-02-14 15:51:56 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#68610
No description provided.