Fix T68610: B-Bone display size/scaling op issues

Fix ReDo and create a new operator to display only the required properties.

Reviewed By: brecht

Differential Revision: https://developer.blender.org/D6849